--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
 This homepage looks horrible. Will prettify soon.
 
-<a href="apzzd.github.io/girlscouts">GS website</a>
+<br>
+
+<a href="girlscouts">Girl Scouts Junior Badges</a>
