--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ html, body, h1, h2, h3, h4, h5 {font-family: "Open Sans", sans-serif}
       
       <div class="w3-container w3-card w3-white w3-round w3-margin"><br>
         <hr class="w3-clear">
-        <h1>Girl Scouts Cadette Badges</h1>
+       <h1><a href="girlscouts/cadette">Girl Scouts Cadette Badges</a></h1>
         <p>All the badges I did in my second year of Girl Scouts.</p>
         
       </div>        
