--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
  <ul>
  
   <li>Code (a lot)</li>
-  <li>Read lots of fiction books about animals</li>
+  <li>Read lots of fiction books about animals including the Warriors series by Erin Hunter</li>
   <li>Volunteer and take classes at ORCSGirls</li>
   <li>Participate in Girl Scout activities</li>
  
@@ -28,7 +28,9 @@
 <h4>My websites<h4>
  
  <a href="https://apzzd.github.io/girlscouts/">Girl Scout Junior Badges Blog</a>
+ <br>
  <a href="https://apzzd.github.io/girlscouts/cadette/">Girl Scout Cadette Badges Blog</a>
+ <br>
  <a href="https://apzzd.github.io/LegoSpectrometer/">Lego Spectrometer Log</a>
  
 </body>
