--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
  <ul>
  
   <li>Code (a lot)</li>
-  <li>Read lots of fiction books about animals including the Warriors series by Erin Hunter</li>
+  <li>Read lots of fiction books about animals including the Warriors series by Erin Hunter (My favorite cat is Squirrelflight)</li>
   <li>Volunteer and take classes at ORCSGirls</li>
   <li>Participate in Girl Scout activities</li>
  
