--- a/index.html
+++ b/index.html
@@ -10,6 +10,14 @@
 
  <h1>Hello! I'm Apzzd.</h1>
  
+<h4>My websites<h4>
+ 
+ <a href="https://apzzd.github.io/girlscouts/">Girl Scout Junior Badges Blog</a>
+ <br>
+ <a href="https://apzzd.github.io/girlscouts/cadette/">Girl Scout Cadette Badges Blog</a>
+ <br>
+ <a href="https://apzzd.github.io/LegoSpectrometer/">Lego Spectrometer Log</a>
+ 
  <h4>About me</h4>
  
  <p>I've taken several classes hosted by <a href="https://www.orcsgirls.org">ORCSGirls</a> and basically just hang and work on coding projects. I know Python, Javascript, Swift, HTML, CSS, and a little bit of C++. I'm also a Girl Scout, and I enjoy participating in community service projects, going to online badge workshops, and writing articles for my troop's newsletters.</p>
@@ -19,19 +27,23 @@
  <ul>
  
   <li>Code (a lot)</li>
-  <li>Read lots of fiction books about animals including the Warriors series by Erin Hunter (My favorite cat is Squirrelflight)</li>
+  <li>Read lots of fiction books about animals</li>
   <li>Volunteer and take classes at ORCSGirls</li>
   <li>Participate in Girl Scout activities</li>
  
  </ul>
  
-<h4>My websites<h4>
+ <h4>My Favorite Books</h4>
  
- <a href="https://apzzd.github.io/girlscouts/">Girl Scout Junior Badges Blog</a>
- <br>
- <a href="https://apzzd.github.io/girlscouts/cadette/">Girl Scout Cadette Badges Blog</a>
- <br>
- <a href="https://apzzd.github.io/LegoSpectrometer/">Lego Spectrometer Log</a>
+ <ul>
+ 
+  <li><strong>Scary Stories for Young Foxes</strong> by Christian McKay Heidicker</li>
+  <li><strong>The One and Only Ivan</strong> by Katherine Applegate</li>
+  <li><strong>Endling</strong> series by Katherine Applegate</li>
+  <li><strong>Warriors</strong> series by Erin Hunter</li>
+  <li><strong>Mouseheart</strong> series by Lisa Fielder</li>
+ 
+ </ul>
  
 </body>
 </html> 
