--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 
  <h1>Hello! I'm Apzzd.</h1>
  
+<img src="wolf.jpg">
+ 
 <h4>My websites<h4>
  
  <a href="https://apzzd.github.io/girlscouts/">Girl Scout Junior Badges Blog</a>
