--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
   <li><strong>Endling</strong> series by Katherine Applegate</li>
   <li><strong>Warriors</strong> series by Erin Hunter</li>
   <li><strong>Mouseheart</strong> series by Lisa Fielder</li>
+  <li><strong>Monument 14</strong> series by Emmy Laybourne</li>
  
  </ul>
  
