--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
  
  <h4>About me</h4>
  
- <p>I've taken several classes hosted by <a href="https://www.orcsgirls.org">ORCSGirls</a> and basically just hang and work on coding projects. I know Python, Javascript, Swift, HTML, CSS, and a little bit of C++. I'm also a Girl Scout, and I enjoy participating in community service projects, going to online badge workshops, and writing articles for my troop's newsletters.</p>
+ <p>I've taken several classes hosted by <a href="https://www.orcsgirls.org">ORCSGirls</a> and basically just hang and work on coding projects. I know Python, Javascript, Swift, HTML, CSS, and a little bit of C++ and Haskell. I'm also a Girl Scout, and I enjoy participating in community service projects, going to online badge workshops, and writing articles for my troop's newsletters.</p>
  
  <h4>What I do:</h4>
  
