--- a/index.html
+++ b/index.html
@@ -39,12 +39,9 @@
  
  <ul>
  
-  <li><strong>Scary Stories for Young Foxes</strong> by Christian McKay Heidicker</li>
-  <li><strong>The One and Only Ivan</strong> by Katherine Applegate</li>
-  <li><strong>Endling</strong> series by Katherine Applegate</li>
-  <li><strong>Warriors</strong> series by Erin Hunter</li>
-  <li><strong>Mouseheart</strong> series by Lisa Fielder</li>
-  <li><strong>Monument 14</strong> series by Emmy Laybourne</li>
+  <li>Snow Crash by Neal Stephenson</li>
+  <li>Fahrenheit 451 by Ray Bradbury</li>
+  
  
  </ul>
  
