--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
  <h1>Hello! I'm Apzzd.</h1>
  
-<img src="fox-med-res copy.jpg" width="200">
+<img src="fox-med-res copy.png" width="200">
  
 <h4>My websites<h4>
  
