--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
+ <head>
+   <link rel="stylesheet" type="text/css" href="style.css">
+ </head>
+ 
 <title>Ada's Website</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<style>
- html, body, h1, h2, h3, h4, h5 {font-family: "Arial";, color: white;, background-color: lightblue;}
-</style>
 <body>
 
  <h1>Hello! I'm Apzzd.</h1>
