--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
    <link rel="stylesheet" type="text/css" href="style.css">
  </head>
  
-<title>Ada's Website</title>
+<title>Ada's Website 🦊</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <body>
