--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
  <h1>Hello! I'm Apzzd.</h1>
  
-<img src="fox-med-res-trans-removebg-preview.png" width="200">
+<img src="fox-trans-rotated.png" width="200">
  
 <h4>My websites<h4>
  
