--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <body>
+ 
+ <div class="topnav">
+  <a href="/index.html">Home</a>
+  <a href="/about-me.html">About Me</a>
+ </div>
 
  <h1>Hello! I'm Apzzd.</h1>
  
@@ -22,31 +27,6 @@
  <a href="https://apzzd.github.io/girlscouts/cadette/">Girl Scout Cadette Badges Blog</a>
  <br>
  <a href="https://apzzd.github.io/LegoSpectrometer/">Lego Spectrometer Log</a>
- 
- <h4>About me</h4>
- 
- <p>I've taken several classes hosted by <a href="https://www.orcsgirls.org">ORCSGirls</a> and basically just hang and work on coding projects. I know Python, Javascript, Swift, HTML, CSS, and a little bit of C++ and Haskell. I'm also a Girl Scout, and I enjoy participating in community service projects, going to online badge workshops, and writing articles for my troop's newsletters.</p>
- 
- <h4>What I do:</h4>
- 
- <ul>
- 
-  <li>Code (a lot)</li>
-  <li>Read lots of fiction books about animals</li>
-  <li>Volunteer and take classes at ORCSGirls</li>
-  <li>Participate in Girl Scout activities</li>
- 
- </ul>
- 
- <h4>My Favorite Books</h4>
- 
- <ul>
- 
-  <li>Snow Crash by Neal Stephenson</li>
-  <li>Fahrenheit 451 by Ray Bradbury</li>
-  
- 
- </ul>
  
 </body>
 </html> 
