--- a/about-me.html
+++ b/about-me.html
@@ -1,4 +1,20 @@
-<h4>About me</h4>
+<!DOCTYPE html>
+<html>
+ <head>
+   <link rel="stylesheet" type="text/css" href="style.css">
+ </head>
+ 
+<title>Ada's Website 🦊 ~ About Me</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<body>
+ 
+ <div class="topnav">
+  <a href="/index.html">Home</a>
+  <a href="/about-me.html">About Me</a>
+ </div>
+
+ <h1>About Me</h1>
  
  <p>I've taken several classes hosted by <a href="https://www.orcsgirls.org">ORCSGirls</a> and basically just hang and work on coding projects. I know Python, Javascript, Swift, HTML, CSS, and a little bit of C++ and Haskell. I'm also a Girl Scout, and I enjoy participating in community service projects, going to online badge workshops, and writing articles for my troop's newsletters.</p>
  
@@ -22,3 +38,7 @@
   
  
  </ul>
+
+ 
+</body>
+</html> 
