--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
  
 <h4>My websites<h4>
  
- <a href="https://apzzd.github.io/girlscouts/">Girl Scout Junior Badges Blog</a>
+ <a class="normal" href="https://apzzd.github.io/girlscouts/">Girl Scout Junior Badges Blog</a>
  <br>
- <a href="https://apzzd.github.io/girlscouts/cadette/">Girl Scout Cadette Badges Blog</a>
+ <a class="normal" href="https://apzzd.github.io/girlscouts/cadette/">Girl Scout Cadette Badges Blog</a>
  <br>
- <a href="https://apzzd.github.io/LegoSpectrometer/">Lego Spectrometer Log</a>
+ <a class="normal" href="https://apzzd.github.io/LegoSpectrometer/">Lego Spectrometer Log</a>
  
 </body>
 </html> 
