--- a/index.html
+++ b/index.html
@@ -28,6 +28,10 @@
  <br>
  <a id="normal" href="https://apzzd.github.io/LegoSpectrometer/">Lego Spectrometer Log</a>
  
+<h4>Project Pages</h4>
+<br>
+<strong>Descriptions and explainations of projects I've been working on</strong>
+
 </body>
 </html> 
 
