--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
  <div class="topnav">
   <a href="/index.html">Home</a>
   <a href="/about-me.html">About Me</a>
+  <a href="/messing-around.html">Messing Around with HTML</a>
  </div>
 
  <h1>Hello! I'm Apzzd.</h1>
