--- a/messing-around.html
+++ b/messing-around.html
@@ -15,6 +15,8 @@
  </div>
 
   <marquee>This text should move across the screen</marquee>
+  <marquee>Isn't this annoying</marquee>
+  <marquee>Mwahahahahahaha</marquee>
 
  
 </body>
