--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
  
  <div class="topnav">
-  <a href="/index.html">Home</a>
+  <a class="selectedLink" href="/index.html">Home</a>
   <a href="/about-me.html">About Me</a>
   <a href="/messing-around.html">Messing Around with HTML</a>
  </div>
