--- a/about-me.html
+++ b/about-me.html
@@ -11,7 +11,8 @@
  
  <div class="topnav">
   <a href="/index.html">Home</a>
-  <a href="/about-me.html">About Me</a>
+  <a  class="selectedLink" href="/about-me.html">About Me</a>
+  <a href="/messing-around.html">Messing Around with HTML</a>
  </div>
 
  <h1>About Me</h1>
