--- a/messing-around.html
+++ b/messing-around.html
@@ -12,6 +12,7 @@
  <div class="topnav">
   <a href="/index.html">Home</a>
   <a href="/about-me.html">About Me</a>
+  <a class="" href="/messing-around.html">Messong Around with HTML</a>
  </div>
 
   <marquee>This text should move across the screen</marquee>
