--- a/messing-around.html
+++ b/messing-around.html
@@ -18,6 +18,8 @@
   <marquee>This text should move across the screen</marquee>
   <marquee>Isn't this annoying</marquee>
   <marquee>Mwahahahahahaha</marquee>
+ 
+ <marquee><img src="https://i.pinimg.com/originals/db/33/f6/db33f655742db47d3798c67591c2f49e.png" width="200"></marquee>
 
  
 </body>
