--- a/messing-around.html
+++ b/messing-around.html
@@ -20,6 +20,8 @@
   <marquee>Mwahahahahahaha</marquee>
  
  <marquee><img src="https://i.pinimg.com/originals/db/33/f6/db33f655742db47d3798c67591c2f49e.png" width="200"></marquee>
+ 
+ <marquee><img src="https://i.pinimg.com/originals/00/bf/7f/00bf7f101f82f08c2fb3cd150714019a.gif" width="200"></marquee>
 
  
 </body>
