--- a/messing-around.html
+++ b/messing-around.html
@@ -19,9 +19,13 @@
   <marquee>Isn't this annoying</marquee>
   <marquee>Mwahahahahahaha</marquee>
  
- <marquee><img src="https://i.pinimg.com/originals/db/33/f6/db33f655742db47d3798c67591c2f49e.png" width="200"></marquee>
+ <br><br><br>
  
- <marquee><img src="https://i.pinimg.com/originals/00/bf/7f/00bf7f101f82f08c2fb3cd150714019a.gif" width="200"></marquee>
+ <h1>Horse Race!</h1>
+ 
+ <marquee><img src="http://emeraude1977.e.m.pic.centerblog.net/704593c0.gif" width="200" scrollamount="1"></marquee>
+ 
+ <marquee><img src="https://i.pinimg.com/originals/00/bf/7f/00bf7f101f82f08c2fb3cd150714019a.gif" width="200" scrollamount="2"></marquee>
 
  
 </body>
