--- a/messing-around.html
+++ b/messing-around.html
@@ -25,9 +25,9 @@
  
  <marquee><img src="http://emeraude1977.e.m.pic.centerblog.net/704593c0.gif" width="200" scrollamount="1"></marquee>
  
- <marquee><img src="https://i.pinimg.com/originals/00/bf/7f/00bf7f101f82f08c2fb3cd150714019a.gif" width="200" scrollamount="2"></marquee>
+ <marquee><img src="https://i.pinimg.com/originals/00/bf/7f/00bf7f101f82f08c2fb3cd150714019a.gif" width="200" scrollamount="3"></marquee>
 
- <marquee><img src="https://i.pinimg.com/originals/bc/55/4b/bc554b9ce233ea832be45f09fd034642.gif" width="200" scrollamount="2"></marquee>
+ <marquee><img src="https://i.pinimg.com/originals/bc/55/4b/bc554b9ce233ea832be45f09fd034642.gif" width="200 scrollamount="2"></marquee>
  
 </body>
 </html> 
