--- a/messing-around.html
+++ b/messing-around.html
@@ -23,18 +23,18 @@
  
  <h1>Horse Race!</h1>
  
- <marquee>
+ <marquee scrollamount="20">
   <div> 
    <img src="http://emeraude1977.e.m.pic.centerblog.net/704593c0.gif" width="200">
   </div>
   
- </marquee scrollamount="20">
+ </marquee>
  
- <marquee>
+ <marquee scrollamount="18">
   <div>
    <img src="https://i.pinimg.com/originals/00/bf/7f/00bf7f101f82f08c2fb3cd150714019a.gif" width="200">
   </div>
- </marquee scrollamount="8">
+ </marquee>
  
 </body>
 </html> 
