--- a/messing-around.html
+++ b/messing-around.html
@@ -21,6 +21,14 @@
  
  <br><br><br>
  
+  <p id="random_number"></p>
+ <script>
+  var randomNumber = Math.floor(Math.random() * 10);
+  document.getElementById("random_number").innerHTML = randomNumber;
+ </script>
+ 
+ <br><br><br>
+ 
  <h1>Horse Race!</h1>
  
  <marquee scrollamount="12">
