--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <a class="selectedLink" href="/index.html">Home</a>
   <a href="/about-me.html">About Me</a>
   <a href="/messing-around.html">Messing Around with HTML</a>
+  <a href="/art.html">Drawings and Artwork</a>
  </div>
 
  <h1>Hello! I'm Apzzd.</h1>
