--- a/messing-around.html
+++ b/messing-around.html
@@ -13,6 +13,7 @@
   <a href="/index.html">Home</a>
   <a href="/about-me.html">About Me</a>
   <a class="selectedLink" href="/messing-around.html">Messing Around with HTML</a>
+  <a href="/art.html">Drawings and Artwork</a>
  </div>
 
   <marquee>This text should move across the screen</marquee>
