--- a/about-me.html
+++ b/about-me.html
@@ -13,6 +13,7 @@
   <a href="/index.html">Home</a>
   <a  class="selectedLink" href="/about-me.html">About Me</a>
   <a href="/messing-around.html">Messing Around with HTML</a>
+  <a href="/art.html">Drawings and Artwork</a>
  </div>
 
  <h1>About Me</h1>
