--- a/art.html
+++ b/art.html
@@ -11,9 +11,9 @@
  
  <div class="topnav">
   <a href="/index.html">Home</a>
-  <a  class="selectedLink" href="/about-me.html">About Me</a>
+  <a href="/about-me.html">About Me</a>
   <a href="/messing-around.html">Messing Around with HTML</a>
-  <a href="/art.html">Drawings and Artwork</a>
+  <a  class="selectedLink" href="/art.html">Drawings and Artwork</a>
  </div>
 
  <h1>Drawings and Artwork</h1>
