--- a/art.html
+++ b/art.html
@@ -17,8 +17,14 @@
  </div>
 
  <h1>Drawings and Artwork</h1>
+ 
+ <p> Recently I've been taking commisions for drawing pet portraits. I've also been drawing pictures of dogs just for fun.</p>
+ 
+ <h2>Commissions</h2>
   
   <img src="fred.jpeg" width="400">
+ 
+ <h2>Fun Drawings</h2>
  
 </body>
 </html> 
