--- a/art.html
+++ b/art.html
@@ -24,7 +24,13 @@
   
   <img src="fred.jpeg" width="400">
  
- <h2>Fun Drawings</h2>
+ <h2>Other Art</h2>
+ 
+ <img src="fox.jpeg" width="400">
+ <img src="cat.jpeg" width="400">
+ <img src="polar-bear.jpeg" width="400">
+ <img src="seal.jpeg" width="400">
+ <img src="dog-wall.jpeg" width="400">
  
 </body>
 </html> 
