--- a/art.html
+++ b/art.html
@@ -26,11 +26,11 @@
  
  <h2>Other Art</h2>
  
- <img src="fox.jpeg" width="400">
- <img src="cat.jpeg" width="400">
- <img src="polar-bear.jpeg" width="400">
- <img src="seal.jpeg" width="400">
- <img src="dog-wall.jpeg" width="400">
+ <img src="fox.jpeg" width="400" padding="20px">
+ <img src="cat.jpeg" width="400" padding="20px">
+ <img src="polar-bear.jpeg" width="400" padding="20px">
+ <img src="seal.jpeg" width="400" padding="20px">
+ <img src="dog-wall.jpeg" width="400" padding="20px">
  
 </body>
 </html> 
