--- a/art.html
+++ b/art.html
@@ -26,11 +26,11 @@
  
  <h2>Other Art</h2>
  
- <img src="fox.jpeg" width="400" padding="20px">
- <img src="cat.jpeg" width="400" padding="20px">
- <img src="polar-bear.jpeg" width="400" padding="20px">
- <img src="seal.jpeg" width="400" padding="20px">
- <img src="dog-wall.jpeg" width="400" padding="20px">
+ <a href="fox.jpeg" ><img src="fox.jpeg" width="400" padding="20px"></a>
+ <a href="cat.jpeg" ><img src="cat.jpeg" width="400" padding="20px"></a>
+ <a href="polar-bear.jpeg" ><img src="polar-bear.jpeg" width="400" padding="20px"></a>
+ <a href="seal.jpeg" ><img src="seal.jpeg" width="400" padding="20px"></a>
+ <a href="dog-wall.jpeg" ><img src="dog-wall.jpeg" width="400" padding="20px"></a>
  
 </body>
 </html> 
