--- a/art.html
+++ b/art.html
@@ -22,7 +22,7 @@
  
  <h2>Commissions</h2>
   
-  <img src="fred.jpeg" width="400">
+ <a href="fred.jpeg" ><img src="fred.jpeg" width="400"></a>
  
  <h2>Other Art</h2>
  
