--- a/messing-around.html
+++ b/messing-around.html
@@ -16,9 +16,9 @@
   <a href="/art.html">Drawings and Artwork</a>
  </div>
 
-  <marquee>This text should move across the screen</marquee>
-  <marquee>Isn't this annoying</marquee>
-  <marquee>Mwahahahahahaha</marquee>
+  <marquee scrollamount="5">This text should move across the screen</marquee>
+  <marquee scrollamount="4">Isn't this annoying</marquee>
+  <marquee scrollamount="3">Mwahahahahahaha</marquee>
  
  <br><br><br>
  
