--- a/art.html
+++ b/art.html
@@ -23,7 +23,7 @@
  <h2>Commissions</h2>
   
  <a href="fred.jpeg" ><img src="fred.jpeg" width="400"></a>
- <a href="pepper.jpeg" ><img src="fred.jpeg" width="400"></a>
+ <a href="pepper.jpeg" ><img src="pepper.jpeg" width="400"></a>
  
  <h2>Other Art</h2>
  
