--- a/art.html
+++ b/art.html
@@ -18,12 +18,12 @@
 
  <h1>Drawings and Artwork</h1>
  
- <p> Recently I've been taking commisions for drawing pet portraits. I've also been drawing pictures of dogs just for fun.</p>
+ <p> Recently I've been taking commisions for drawing pet portraits. I've also been drawing pictures just for fun.</p>
  
  <h2>Commissions</h2>
   
  <a href="fred.jpeg" ><img src="fred.jpeg" width="400"></a>
- <a href="pepper.heic" ><img src="pepper.heic" width="400"></a>
+ <a href="pepper.jpeg" ><img src="pepper.jpeg" width="400"></a>
  
  <h2>Other Art</h2>
  
