--- a/art.html
+++ b/art.html
@@ -33,5 +33,13 @@
  <a href="seal.jpeg" ><img src="seal.jpeg" width="400" padding="20px"></a>
  <a href="dog-wall.jpeg" ><img src="dog-wall.jpeg" width="400" padding="20px"></a>
  
+ <h2>Undertale Fan Art</h2>
+ 
+ <a href="alphys-colored-1.jpeg" ><img src="alphys-colored-1.jpeg" width="400" padding="20px"></a>
+ <a href="alphys-uncolored-1.jpeg" ><img src="alphys-uncolored-1.jpeg" width="400" padding="20px"></a>
+ <a href="sans-1.jpeg" ><img src="sans-1.jpeg" width="400" padding="20px"></a>
+ <a href="undyne-colored-1.jpeg" ><img src="undyne-colored-1.jpeg" width="400" padding="20px"></a>
+ <a href="undyne-uncolored-1.jpeg" ><img src="undyne-uncolored-1.jpeg" width="400" padding="20px"></a>
+ 
 </body>
 </html> 
