--- a/about-me.html
+++ b/about-me.html
@@ -28,6 +28,7 @@
   <li>Read lots of fiction books about animals</li>
   <li>Volunteer and take classes at ORCSGirls</li>
   <li>Participate in Girl Scout activities</li>
+  <li>Play Undertale</li>
  
  </ul>
  
@@ -37,6 +38,9 @@
  
   <li>Snow Crash by Neal Stephenson</li>
   <li>Fahrenheit 451 by Ray Bradbury</li>
+  <li>Ready Player One by Ernest Cline</li>
+  <li>Ready Player Two by Ernest Cline</li>
+  <li>Mort(e) by Robert Repino</li>
   
  
  </ul>
