--- a/index.html
+++ b/index.html
@@ -27,7 +27,14 @@
  <a id="normal" href="https://apzzd.github.io/girlscouts/cadette/">Girl Scout Cadette Badges Blog</a>
  <br>
  <a id="normal" href="https://apzzd.github.io/LegoSpectrometer/">Lego Spectrometer Log</a>
-
+ 
+ <h4>Competitions<h4>
+  
+  <a id="normal" href="https://www.orcsgirls.org/competitions/storymap-08-2021">Mapping Your Story Competition - Hosted by OrcsGirls</a>
+ 
+  
+  
+  
 </body>
 </html> 
 
