--- a/about-me.html
+++ b/about-me.html
@@ -25,10 +25,10 @@
  <ul>
  
   <li>Code (a lot)</li>
-  <li>Read lots of fiction books about animals</li>
-  <li>Volunteer and take classes at ORCSGirls</li>
+  <li>Read lots of dystopian novels</li>
+  <li>Volunteer and take classes at <a href="https://orcsgirls.org">ORCSGirls</a></li>
   <li>Participate in Girl Scout activities</li>
-  <li>Play Undertale</li>
+  <li>Play Undertale and Deltarune</li>
  
  </ul>
  
