--- a/art.html
+++ b/art.html
@@ -36,10 +36,8 @@
  <h2>Undertale Fan Art</h2>
  
  <a href="alphys-colored-1.jpg" ><img src="alphys-colored-1.jpg" width="400" padding="20px"></a>
- <a href="alphys-uncolored-1.jpg" ><img src="alphys-uncolored-1.jpg" width="400" padding="20px"></a>
- <a href="sans-1.jpeg" ><img src="sans-1.jpeg" width="400" padding="20px"></a>
- <a href="undyne-colored-1.jpg" ><img src="undyne-colored-1.jpg" width="400" padding="20px"></a>
- <a href="undyne-uncolored-1.jpg" ><img src="undyne-uncolored-1.jpg" width="400" padding="20px"></a>
+ <a href="undyne.jpeg"><img src="undyne.jpeg" width="400" padding="20px"></a>
+ <a href="undyne-dig.jpeg"><img src="undyne-dig.jpeg" width="400" padding="20px"></a>
  
 </body>
 </html> 
