--- a/art.html
+++ b/art.html
@@ -38,6 +38,7 @@
  <a href="alphys-colored-1.jpg" ><img src="alphys-colored-1.jpg" width="400" padding="20px"></a>
  <a href="undyne.jpeg"><img src="undyne.jpeg" width="400" padding="20px"></a>
  <a href="undyne-dig.jpeg"><img src="undyne-dig.jpeg" width="400" padding="20px"></a>
+ <a href="sans.jpeg"><img src="sans.jpeg" width="400" padding="20px"></a>
  
 </body>
 </html> 
