--- a/art.html
+++ b/art.html
@@ -31,7 +31,7 @@
  <a href="cat.jpeg" ><img src="cat.jpeg" width="400" padding="20px"></a>
  <a href="polar-bear.jpeg" ><img src="polar-bear.jpeg" width="400" padding="20px"></a>
  <a href="seal.jpeg" ><img src="seal.jpeg" width="400" padding="20px"></a>
- <a href="dog-wall.jpeg" ><img src="dog-wall.jpeg" width="400" padding="20px"></a>
+ <a href="dog-wall.jpg" ><img src="dog-wall.jpg" width="400" padding="20px"></a>
  
  <h2>Undertale Fan Art</h2>
  
