--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
   <h4>Projects</h4>
   
   <a id="normal" href="https://apzzd.github.io/Vagabond">Vagabond - An Ink Adventure</a>
+  
+  <a id="normal" href="https://apzzd.github.io/middndadv">A Medieval Dnd Adventure</a>
 </body>
 </html> 
 
