--- a/index.html
+++ b/index.html
@@ -4,38 +4,11 @@
    <link rel="stylesheet" type="text/css" href="style.css">
  </head>
  
-<title>Ada's Website 🦊</title>
+<title>blog</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <body>
- 
- <div class="topnav">
-  <a class="selectedLink" href="/index.html">Home</a>
-  <a href="/about-me.html">About Me</a>
-  <a href="/messing-around.html">Messing Around with HTML</a>
-  <a href="/art.html">Drawings and Artwork</a>
- </div>
-
- <h1>Hello! I'm Apzzd.</h1>
- 
-<h4>My websites<h4>
- 
- <a id="normal" href="https://apzzd.github.io/girlscouts/">Girl Scout Junior Badges Blog</a>
- <br>
- <a id="normal" href="https://apzzd.github.io/girlscouts/cadette/">Girl Scout Cadette Badges Blog</a>
- <br>
- <a id="normal" href="https://apzzd.github.io/LegoSpectrometer/">Lego Spectrometer Log</a>
- 
- <h4>Competitions<h4>
-  
-  <a id="normal" href="https://www.orcsgirls.org/competitions/storymap-08-2021">Mapping Your Story Competition - Hosted by OrcsGirls</a>
-  
-  
-  <h4>Projects</h4>
-  
-  <a id="normal" href="https://apzzd.github.io/Vagabond">Vagabond - An Ink Adventure</a>
-  
-  <a id="normal" href="https://apzzd.github.io/middndadv">A Medieval Dnd Adventure</a>
+ <p>...no content here...</p>
 </body>
 </html> 
 
