--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
 </script>
  </head>
  
-<title>Ada's Blog</title>
+<title>ada's blog</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <body>
 
   <header> <!-- general website header -->
-    <a href="./" class="title">Ada's Blog</a>
+    <a href="./" class="title">ada's blog</a>
   </header>
 
   <div> <!-- decription -->
