--- a/post-template.html
+++ b/post-template.html
@@ -35,8 +35,8 @@
   
   <footer>
       <a href="../index.html" class="home-link">back to home</a>
-      <br><br>
-      <p style="font-size: 15px;">All posts are licensed under <a href="https://creativecommons.org/licenses/by-nc/4.0/">CC-by-NC 4.0</a>.</p>
+      <br>
+      <p style="font-size: 12px; color: #bbbbbb;">All posts are licensed under <a href="https://creativecommons.org/licenses/by-nc/4.0/">CC-by-NC 4.0</a>.</p>
   </footer>
   
   
