--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
     </div>
 
    <div class="post-link-div"> <!-- a post link, with description -->
-    	<a href="./posts/billardtische-fliesen-deutschpost-9-6-2025.html" class="post-link-head">billardtische und unendliche fliesen (deutsch)</a>
-        <p class="post-link-descrip">ein kurzes deutschpost uber billardtische</p>
+    	<a href="./posts/billardtische-parkettieren-deutschpost-9-6-2025.html" class="post-link-head">billardtische und unendliche parkettieren (deutsch)</a>
+        <p class="post-link-descrip">ein sehr kurzes deutschpost über billardtische</p>
     </div>
    
   </div>
